tests/fixtures/should_fail/enum_zero.bop
// This enum should fail because it has no member with value 0
enum MissingZero {
    A = 1;
    B = 2;
}
